@@ -361,10 +361,7 @@ unsigned FlowControl::process(Flow* flow, Packet* p)
     p->flow = flow;
 
     if ( flow->flow_state )
-    {
         set_policies(snort_conf, flow->policy_id);
-        p->application_protocol_ordinal = flow->ssn_state.application_protocol;
-    }
     else
     {
         init_roles(p, flow);
@@ -379,6 +376,7 @@ unsigned FlowControl::process(Flow* flow, Packet* p)
 
         ++news;
     }
+    flow->set_direction(p);
 
     switch ( flow->flow_state )
     {
@@ -412,6 +410,7 @@ unsigned FlowControl::process(Flow* flow, Packet* p)
         break;
     }
 
+    p->application_protocol_ordinal = flow->ssn_state.application_protocol;
     return news;
 }
 
